codigo/parser/interpreter.output
Terminals unused in grammar

   BOOL
   UNDEFINED
   MULTIPLE_COMENTARIO
   SIMPLE_COMENTARIO


Gramática

    0 $accept: program $end

    1 program: stmtlist

    2 stmtlist: %empty
    3         | stmtlist stmt
    4         | stmtlist error

    5 stmt: SEMICOLON
    6     | asgn SEMICOLON
    7     | print SEMICOLON
    8     | read SEMICOLON
    9     | if
   10     | while
   11     | repeat
   12     | for
   13     | erase

   14 for: FOR VARIABLE FROM exp UNTIL exp STEP exp DO stmtlist END_FOR
   15    | FOR VARIABLE FROM exp UNTIL exp DO stmtlist END_FOR

   16 if: IF cond THEN stmtlist END_IF
   17   | IF cond THEN stmtlist ELSE stmtlist END_IF

   18 while: WHILE cond DO stmtlist END_WHILE

   19 repeat: REPEAT stmtlist UNTIL cond

   20 cond: LPAREN exp RPAREN

   21 erase: ERASE

   22 asgn: VARIABLE ASSIGNMENT exp
   23     | VARIABLE ASSIGNMENT asgn
   24     | CONSTANT ASSIGNMENT exp
   25     | CONSTANT ASSIGNMENT asgn

   26 print: PRINT exp
   27      | PRINT_STRING exp

   28 read: READ LPAREN VARIABLE RPAREN
   29     | READ_STRING LPAREN VARIABLE RPAREN
   30     | READ LPAREN CONSTANT RPAREN

   31 exp: NUMBER
   32    | STRING
   33    | exp PLUS exp
   34    | exp MINUS exp
   35    | exp MULTIPLICATION exp
   36    | exp DIVISION exp
   37    | exp DIVISION_INT exp
   38    | LPAREN exp RPAREN
   39    | PLUS exp
   40    | MINUS exp
   41    | exp MODULO exp
   42    | exp POWER exp
   43    | exp CONCATENATION exp
   44    | VARIABLE
   45    | CONSTANT
   46    | BUILTIN LPAREN listOfExp RPAREN
   47    | exp GREATER_THAN exp
   48    | exp GREATER_OR_EQUAL exp
   49    | exp LESS_THAN exp
   50    | exp LESS_OR_EQUAL exp
   51    | exp EQUAL exp
   52    | exp NOT_EQUAL exp
   53    | exp AND exp
   54    | exp OR exp
   55    | NOT exp

   56 listOfExp: %empty
   57          | exp restOfListOfExp

   58 restOfListOfExp: %empty
   59                | COMMA exp restOfListOfExp


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 4
SEMICOLON (258) 5 6 7 8
PRINT (259) 26
READ (260) 28 30
PRINT_STRING (261) 27
READ_STRING (262) 29
IF (263) 16 17
THEN (264) 16 17
ELSE (265) 17
END_IF (266) 16 17
WHILE (267) 18
DO (268) 14 15 18
END_WHILE (269) 18
REPEAT (270) 19
UNTIL (271) 14 15 19
FOR (272) 14 15
FROM (273) 14 15
STEP (274) 14
END_FOR (275) 14 15
ERASE (276) 21
ASSIGNMENT (277) 22 23 24 25
COMMA (278) 59
NUMBER (279) 31
BOOL (280)
STRING (281) 32
VARIABLE (282) 14 15 22 23 28 29 44
UNDEFINED (283)
CONSTANT (284) 24 25 30 45
BUILTIN (285) 46
OR (286) 54
AND (287) 53
GREATER_OR_EQUAL (288) 48
LESS_OR_EQUAL (289) 50
GREATER_THAN (290) 47
LESS_THAN (291) 49
EQUAL (292) 51
NOT_EQUAL (293) 52
NOT (294) 55
MULTIPLE_COMENTARIO (295)
SIMPLE_COMENTARIO (296)
PLUS (297) 33 39
MINUS (298) 34 40
MULTIPLICATION (299) 35
DIVISION (300) 36
DIVISION_INT (301) 37
MODULO (302) 41
CONCATENATION (303) 43
LPAREN (304) 20 28 29 30 38 46
RPAREN (305) 20 28 29 30 38 46
UNARY (306)
POWER (307) 42


No terminales con las reglas donde aparecen

$accept (53)
    en la izquierda: 0
program (54)
    en la izquierda: 1, en la derecha: 0
stmtlist (55)
    en la izquierda: 2 3 4, en la derecha: 1 3 4 14 15 16 17 18 19
stmt (56)
    en la izquierda: 5 6 7 8 9 10 11 12 13, en la derecha: 3
for (57)
    en la izquierda: 14 15, en la derecha: 12
if (58)
    en la izquierda: 16 17, en la derecha: 9
while (59)
    en la izquierda: 18, en la derecha: 10
repeat (60)
    en la izquierda: 19, en la derecha: 11
cond (61)
    en la izquierda: 20, en la derecha: 16 17 18 19
erase (62)
    en la izquierda: 21, en la derecha: 13
asgn (63)
    en la izquierda: 22 23 24 25, en la derecha: 6 23 25
print (64)
    en la izquierda: 26 27, en la derecha: 7
read (65)
    en la izquierda: 28 29 30, en la derecha: 8
exp (66)
    en la izquierda: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 51 52 53 54 55, en la derecha: 14 15 20 22 24 26 27
    33 34 35 36 37 38 39 40 41 42 43 47 48 49 50 51 52 53 54 55 57
    59
listOfExp (67)
    en la izquierda: 56 57, en la derecha: 46
restOfListOfExp (68)
    en la izquierda: 58 59, en la derecha: 57 59


State 0

    0 $accept: . program $end

    $default  reduce usando la regla 2 (stmtlist)

    program   ir al estado 1
    stmtlist  ir al estado 2


State 1

    0 $accept: program . $end

    $end  desplazar e ir al estado 3


State 2

    1 program: stmtlist .
    3 stmtlist: stmtlist . stmt
    4         | stmtlist . error

    error         desplazar e ir al estado 4
    SEMICOLON     desplazar e ir al estado 5
    PRINT         desplazar e ir al estado 6
    READ          desplazar e ir al estado 7
    PRINT_STRING  desplazar e ir al estado 8
    READ_STRING   desplazar e ir al estado 9
    IF            desplazar e ir al estado 10
    WHILE         desplazar e ir al estado 11
    REPEAT        desplazar e ir al estado 12
    FOR           desplazar e ir al estado 13
    ERASE         desplazar e ir al estado 14
    VARIABLE      desplazar e ir al estado 15
    CONSTANT      desplazar e ir al estado 16

    $end  reduce usando la regla 1 (program)

    stmt    ir al estado 17
    for     ir al estado 18
    if      ir al estado 19
    while   ir al estado 20
    repeat  ir al estado 21
    erase   ir al estado 22
    asgn    ir al estado 23
    print   ir al estado 24
    read    ir al estado 25


State 3

    0 $accept: program $end .

    $default  aceptar


State 4

    4 stmtlist: stmtlist error .

    $default  reduce usando la regla 4 (stmtlist)


State 5

    5 stmt: SEMICOLON .

    $default  reduce usando la regla 5 (stmt)


State 6

   26 print: PRINT . exp

    NUMBER    desplazar e ir al estado 26
    STRING    desplazar e ir al estado 27
    VARIABLE  desplazar e ir al estado 28
    CONSTANT  desplazar e ir al estado 29
    BUILTIN   desplazar e ir al estado 30
    NOT       desplazar e ir al estado 31
    PLUS      desplazar e ir al estado 32
    MINUS     desplazar e ir al estado 33
    LPAREN    desplazar e ir al estado 34

    exp  ir al estado 35


State 7

   28 read: READ . LPAREN VARIABLE RPAREN
   30     | READ . LPAREN CONSTANT RPAREN

    LPAREN  desplazar e ir al estado 36


State 8

   27 print: PRINT_STRING . exp

    NUMBER    desplazar e ir al estado 26
    STRING    desplazar e ir al estado 27
    VARIABLE  desplazar e ir al estado 28
    CONSTANT  desplazar e ir al estado 29
    BUILTIN   desplazar e ir al estado 30
    NOT       desplazar e ir al estado 31
    PLUS      desplazar e ir al estado 32
    MINUS     desplazar e ir al estado 33
    LPAREN    desplazar e ir al estado 34

    exp  ir al estado 37


State 9

   29 read: READ_STRING . LPAREN VARIABLE RPAREN

    LPAREN  desplazar e ir al estado 38


State 10

   16 if: IF . cond THEN stmtlist END_IF
   17   | IF . cond THEN stmtlist ELSE stmtlist END_IF

    LPAREN  desplazar e ir al estado 39

    cond  ir al estado 40


State 11

   18 while: WHILE . cond DO stmtlist END_WHILE

    LPAREN  desplazar e ir al estado 39

    cond  ir al estado 41


State 12

   19 repeat: REPEAT . stmtlist UNTIL cond

    $default  reduce usando la regla 2 (stmtlist)

    stmtlist  ir al estado 42


State 13

   14 for: FOR . VARIABLE FROM exp UNTIL exp STEP exp DO stmtlist END_FOR
   15    | FOR . VARIABLE FROM exp UNTIL exp DO stmtlist END_FOR

    VARIABLE  desplazar e ir al estado 43


State 14

   21 erase: ERASE .

    $default  reduce usando la regla 21 (erase)


State 15

   22 asgn: VARIABLE . ASSIGNMENT exp
   23     | VARIABLE . ASSIGNMENT asgn

    ASSIGNMENT  desplazar e ir al estado 44


State 16

   24 asgn: CONSTANT . ASSIGNMENT exp
   25     | CONSTANT . ASSIGNMENT asgn

    ASSIGNMENT  desplazar e ir al estado 45


State 17

    3 stmtlist: stmtlist stmt .

    $default  reduce usando la regla 3 (stmtlist)


State 18

   12 stmt: for .

    $default  reduce usando la regla 12 (stmt)


State 19

    9 stmt: if .

    $default  reduce usando la regla 9 (stmt)


State 20

   10 stmt: while .

    $default  reduce usando la regla 10 (stmt)


State 21

   11 stmt: repeat .

    $default  reduce usando la regla 11 (stmt)


State 22

   13 stmt: erase .

    $default  reduce usando la regla 13 (stmt)


State 23

    6 stmt: asgn . SEMICOLON

    SEMICOLON  desplazar e ir al estado 46


State 24

    7 stmt: print . SEMICOLON

    SEMICOLON  desplazar e ir al estado 47


State 25

    8 stmt: read . SEMICOLON

    SEMICOLON  desplazar e ir al estado 48


State 26

   31 exp: NUMBER .

    $default  reduce usando la regla 31 (exp)


State 27

   32 exp: STRING .

    $default  reduce usando la regla 32 (exp)


State 28

   44 exp: VARIABLE .

    $default  reduce usando la regla 44 (exp)


State 29

   45 exp: CONSTANT .

    $default  reduce usando la regla 45 (exp)


State 30

   46 exp: BUILTIN . LPAREN listOfExp RPAREN

    LPAREN  desplazar e ir al estado 49


State 31

   55 exp: NOT . exp

    NUMBER    desplazar e ir al estado 26
    STRING    desplazar e ir al estado 27
    VARIABLE  desplazar e ir al estado 28
    CONSTANT  desplazar e ir al estado 29
    BUILTIN   desplazar e ir al estado 30
    NOT       desplazar e ir al estado 31
    PLUS      desplazar e ir al estado 32
    MINUS     desplazar e ir al estado 33
    LPAREN    desplazar e ir al estado 34

    exp  ir al estado 50


State 32

   39 exp: PLUS . exp

    NUMBER    desplazar e ir al estado 26
    STRING    desplazar e ir al estado 27
    VARIABLE  desplazar e ir al estado 28
    CONSTANT  desplazar e ir al estado 29
    BUILTIN   desplazar e ir al estado 30
    NOT       desplazar e ir al estado 31
    PLUS      desplazar e ir al estado 32
    MINUS     desplazar e ir al estado 33
    LPAREN    desplazar e ir al estado 34

    exp  ir al estado 51


State 33

   40 exp: MINUS . exp

    NUMBER    desplazar e ir al estado 26
    STRING    desplazar e ir al estado 27
    VARIABLE  desplazar e ir al estado 28
    CONSTANT  desplazar e ir al estado 29
    BUILTIN   desplazar e ir al estado 30
    NOT       desplazar e ir al estado 31
    PLUS      desplazar e ir al estado 32
    MINUS     desplazar e ir al estado 33
    LPAREN    desplazar e ir al estado 34

    exp  ir al estado 52


State 34

   38 exp: LPAREN . exp RPAREN

    NUMBER    desplazar e ir al estado 26
    STRING    desplazar e ir al estado 27
    VARIABLE  desplazar e ir al estado 28
    CONSTANT  desplazar e ir al estado 29
    BUILTIN   desplazar e ir al estado 30
    NOT       desplazar e ir al estado 31
    PLUS      desplazar e ir al estado 32
    MINUS     desplazar e ir al estado 33
    LPAREN    desplazar e ir al estado 34

    exp  ir al estado 53


State 35

   26 print: PRINT exp .
   33 exp: exp . PLUS exp
   34    | exp . MINUS exp
   35    | exp . MULTIPLICATION exp
   36    | exp . DIVISION exp
   37    | exp . DIVISION_INT exp
   41    | exp . MODULO exp
   42    | exp . POWER exp
   43    | exp . CONCATENATION exp
   47    | exp . GREATER_THAN exp
   48    | exp . GREATER_OR_EQUAL exp
   49    | exp . LESS_THAN exp
   50    | exp . LESS_OR_EQUAL exp
   51    | exp . EQUAL exp
   52    | exp . NOT_EQUAL exp
   53    | exp . AND exp
   54    | exp . OR exp

    OR                desplazar e ir al estado 54
    AND               desplazar e ir al estado 55
    GREATER_OR_EQUAL  desplazar e ir al estado 56
    LESS_OR_EQUAL     desplazar e ir al estado 57
    GREATER_THAN      desplazar e ir al estado 58
    LESS_THAN         desplazar e ir al estado 59
    EQUAL             desplazar e ir al estado 60
    NOT_EQUAL         desplazar e ir al estado 61
    PLUS              desplazar e ir al estado 62
    MINUS             desplazar e ir al estado 63
    MULTIPLICATION    desplazar e ir al estado 64
    DIVISION          desplazar e ir al estado 65
    DIVISION_INT      desplazar e ir al estado 66
    MODULO            desplazar e ir al estado 67
    CONCATENATION     desplazar e ir al estado 68
    POWER             desplazar e ir al estado 69

    $default  reduce usando la regla 26 (print)


State 36

   28 read: READ LPAREN . VARIABLE RPAREN
   30     | READ LPAREN . CONSTANT RPAREN

    VARIABLE  desplazar e ir al estado 70
    CONSTANT  desplazar e ir al estado 71


State 37

   27 print: PRINT_STRING exp .
   33 exp: exp . PLUS exp
   34    | exp . MINUS exp
   35    | exp . MULTIPLICATION exp
   36    | exp . DIVISION exp
   37    | exp . DIVISION_INT exp
   41    | exp . MODULO exp
   42    | exp . POWER exp
   43    | exp . CONCATENATION exp
   47    | exp . GREATER_THAN exp
   48    | exp . GREATER_OR_EQUAL exp
   49    | exp . LESS_THAN exp
   50    | exp . LESS_OR_EQUAL exp
   51    | exp . EQUAL exp
   52    | exp . NOT_EQUAL exp
   53    | exp . AND exp
   54    | exp . OR exp

    OR                desplazar e ir al estado 54
    AND               desplazar e ir al estado 55
    GREATER_OR_EQUAL  desplazar e ir al estado 56
    LESS_OR_EQUAL     desplazar e ir al estado 57
    GREATER_THAN      desplazar e ir al estado 58
    LESS_THAN         desplazar e ir al estado 59
    EQUAL             desplazar e ir al estado 60
    NOT_EQUAL         desplazar e ir al estado 61
    PLUS              desplazar e ir al estado 62
    MINUS             desplazar e ir al estado 63
    MULTIPLICATION    desplazar e ir al estado 64
    DIVISION          desplazar e ir al estado 65
    DIVISION_INT      desplazar e ir al estado 66
    MODULO            desplazar e ir al estado 67
    CONCATENATION     desplazar e ir al estado 68
    POWER             desplazar e ir al estado 69

    $default  reduce usando la regla 27 (print)


State 38

   29 read: READ_STRING LPAREN . VARIABLE RPAREN

    VARIABLE  desplazar e ir al estado 72


State 39

   20 cond: LPAREN . exp RPAREN

    NUMBER    desplazar e ir al estado 26
    STRING    desplazar e ir al estado 27
    VARIABLE  desplazar e ir al estado 28
    CONSTANT  desplazar e ir al estado 29
    BUILTIN   desplazar e ir al estado 30
    NOT       desplazar e ir al estado 31
    PLUS      desplazar e ir al estado 32
    MINUS     desplazar e ir al estado 33
    LPAREN    desplazar e ir al estado 34

    exp  ir al estado 73


State 40

   16 if: IF cond . THEN stmtlist END_IF
   17   | IF cond . THEN stmtlist ELSE stmtlist END_IF

    THEN  desplazar e ir al estado 74


State 41

   18 while: WHILE cond . DO stmtlist END_WHILE

    DO  desplazar e ir al estado 75


State 42

    3 stmtlist: stmtlist . stmt
    4         | stmtlist . error
   19 repeat: REPEAT stmtlist . UNTIL cond

    error         desplazar e ir al estado 4
    SEMICOLON     desplazar e ir al estado 5
    PRINT         desplazar e ir al estado 6
    READ          desplazar e ir al estado 7
    PRINT_STRING  desplazar e ir al estado 8
    READ_STRING   desplazar e ir al estado 9
    IF            desplazar e ir al estado 10
    WHILE         desplazar e ir al estado 11
    REPEAT        desplazar e ir al estado 12
    UNTIL         desplazar e ir al estado 76
    FOR           desplazar e ir al estado 13
    ERASE         desplazar e ir al estado 14
    VARIABLE      desplazar e ir al estado 15
    CONSTANT      desplazar e ir al estado 16

    stmt    ir al estado 17
    for     ir al estado 18
    if      ir al estado 19
    while   ir al estado 20
    repeat  ir al estado 21
    erase   ir al estado 22
    asgn    ir al estado 23
    print   ir al estado 24
    read    ir al estado 25


State 43

   14 for: FOR VARIABLE . FROM exp UNTIL exp STEP exp DO stmtlist END_FOR
   15    | FOR VARIABLE . FROM exp UNTIL exp DO stmtlist END_FOR

    FROM  desplazar e ir al estado 77


State 44

   22 asgn: VARIABLE ASSIGNMENT . exp
   23     | VARIABLE ASSIGNMENT . asgn
